stling the cards

--- a/index.html
+++ b/index.html
@@ -7,22 +7,35 @@
    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <header>
+   <header id="title">
        <h1>Tile Matching Game</h1>
    </header>
+
    <div class="card-container">
-   <img id="card1" class="hiding" onclick="clicked(this)" src="2_of_clubs.png" alt="">
-   <img id="card2" class="hiding" onclick="clicked(this)" src="2_of_diamonds.png" alt="">
-   <img id="card3" class="hiding" onclick="clicked(this)" src="3_of_diamonds.png" alt="">
-   <img id="card4" class="hiding" onclick="clicked(this)" src="2_of_spades.png" alt="">
-   <img id="card5" class="hiding" onclick="clicked(this)" src="3_of_clubs.png" alt="">
-   <img id="card6" class="hiding" onclick="clicked(this)" src="3_of_diamonds.png" alt="">
-   <img id="card7" class="hiding" onclick="clicked(this)" src="2_of_hearts.png" alt="">
-   <img id="card8" class="hiding" onclick="clicked(this)" src="2_of_hearts.png" alt="">
-   <img id="card9" class="hiding" onclick="clicked(this)" src="3_of_clubs.png" alt="">
-   <img id="card10" class="hiding" onclick="clicked(this)" src="2_of_clubs.png" alt="">
-   <img id="card11" class="hiding" onclick="clicked(this)" src="2_of_spades.png" alt="">
-   <img id="card12" class="hiding" onclick="clicked(this)" src="2_of_diamonds.png" alt="">
+    <tr>
+      <td><img id="card1" class="hiding" onclick="clicked(this)" src="2_of_clubs.png" alt=""></td>
+      <img id="card2" class="hiding" onclick="clicked(this)" src="2_of_diamonds.png" alt=""></td>
+      <img id="card3" class="hiding" onclick="clicked(this)" src="3_of_diamonds.png" alt=""></td>
+    </tr>
+      
+      <tr>
+         <td><img id="card4" class="hiding" onclick="clicked(this)" src="2_of_spades.png" alt=""></td>
+         <td><img id="card5" class="hiding" onclick="clicked(this)" src="3_of_clubs.png" alt=""></td>
+         <td><img id="card6" class="hiding" onclick="clicked(this)" src="3_of_diamonds.png" alt=""></td>
+      </tr>
+
+      <tr>
+         <td><img id="card7" class="hiding" onclick="clicked(this)" src="2_of_hearts.png" alt=""></td>
+         <td><img id="card8" class="hiding" onclick="clicked(this)" src="2_of_hearts.png" alt=""></td>
+         <td><img id="card9" class="hiding" onclick="clicked(this)" src="3_of_clubs.png" alt=""></td>
+    </tr>
+      
+      <tr>
+         <td><img id="card10" class="hiding" onclick="clicked(this)" src="2_of_clubs.png" alt=""></td>
+         <td><img id="card11" class="hiding" onclick="clicked(this)" src="2_of_spades.png" alt=""></td>
+         <td><img id="card12" class="hiding" onclick="clicked(this)" src="2_of_diamonds.png" alt=""></td>
+      </div>
+
    </div>
 
 
