styling the cards

--- a/index.html
+++ b/index.html
@@ -17,15 +17,12 @@
     <div class="card"><img id="card3" class="hiding" onclick="clicked(this)" src="3_of_diamonds.png" alt="" height="100px" width="100px"></div>
     <div class="card"><img id="card4" class="hiding" onclick="clicked(this)" src="2_of_spades.png" alt="" height="100px" width="100px"></div>
     </div>
-    <br>
-
     <div class="card-container">
     <div class="card"><img id="card5" class="hiding" onclick="clicked(this)" src="3_of_clubs.png" alt="" height="100px" width="100px"></div>
     <div class="card"><img id="card6" class="hiding" onclick="clicked(this)" src="3_of_diamonds.png" alt="" height="100px" width="100px"></div>
     <div class="card"><img id="card7" class="hiding" onclick="clicked(this)" src="2_of_hearts.png" alt="" height="100px" width="100px"></div>
     <div class="card"><img id="card8" class="hiding" onclick="clicked(this)" src="2_of_hearts.png" alt="" height="100px" width="100px"></div>
     </div>
-    <br>
     <div class="card-container">
     <div class="card"><img id="card9" class="hiding" onclick="clicked(this)" src="3_of_clubs.png" alt="" height="100px" width="100px"></div>
     <div class="card"><img id="card10" class="hiding" onclick="clicked(this)" src="2_of_clubs.png" alt="" height="100px" width="100px"></div>
@@ -33,8 +30,7 @@
     <div class="card"> <img id="card12" class="hiding" onclick="clicked(this)" src="2_of_diamonds.png" alt="" height="100px" width="100px"></div>
 
    </div>
-   <br>
-   <button class="Play"></button>
+   <button type="button" class="Play"></button>
 
 
    <!-- <span id="score"></span> -->
