--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
    <header id="title">
-       <h1>Tile Matching Game</h1>
+       <h1>Tile Matching</h1>
    </header>
+   <div id="score">Moves: <span id="move-count">0</span></div>
+
 
    <div class="card-container">
     <div class="card"><img id="card1" class="hiding" onclick="clicked(this)" src="2_of_clubs.png" alt="" height="200px" width="200px"></div>
@@ -35,7 +37,6 @@
 
 
    <!-- <span id="score"></span> -->
-   <div id="score">Moves: <span id="move-count">0</span></div>
 
 
    <script src="script.js"></script>  
