added time count

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
        <h1>Tile Matching</h1>
    </header>
    <div id="score">Moves: <span id="move-count">0</span></div>
+   <div id="time">Time: <span id="time-count"></span>0</div>
+    <div id="stars">Stars: <span id="time-count"></span>0</div>
+
+
 
 
    <div class="card-container">
