--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
    <header id="title">
        <h1>Tile Matching</h1>
    </header>
-   <div id="score"> Moves: <span id="move-count">0</span></div>
-   <div id="time">Time: <span id="time-count"></span>0</div>
-    <div id="stars">Stars: <span id="star-count"></span></div>
+   <div id="score"><button> Moves: <span id="move-count">0</span></button></div>
+   <div id="time"><button>Time: <span id="time-count">0</span></button></div>
+    <div id="stars"><button>Stars: <span id="star-count"></span></button></div>
 
 
 
@@ -37,7 +37,7 @@
 
    </div>
    
-   <button type="button" class="Play">Play</button>
+   <button id="play" type="button" class="Play">Play</button>
 
 
    <!-- <span id="score"></span> -->
